- The tr.im support was added - Some improvements to the status updater:    - Check for wrong username or password : error dialog    - Notification for send message    - Error dialog if something goes wrong - os.popen was replaced by the commands method for executing shell commands

--- a/pybit.conf
+++ b/pybit.conf
@@ -2,8 +2,8 @@
 # 
 # Please read the comments if you edit this file manualy!
 #
-# Select the engine to use: bit.ly = 0, is.gd = 1, smsh.me = 2, cli.gs = 3
-engine = 0
+# Select the engine to use: bit.ly = 0, is.gd = 1, smsh.me = 2, cli.gs = 3, tr.im = 4
+engine = -1
 
 # If you have selected bit.ly set the username and the apiKey and if you are using cli.gs - only the apiKey
 # For default is set the bitlyapidemo account, please change it before using it!
@@ -12,7 +12,7 @@ api = R_0da49e0a9118ff35f52f629d2d71bf07
 
 # Your twitter account or any other account just change the update URL!
 tusername = xxxxxxx
-tpassword = xxxxxxx
+tpassword = xxxxxxxx
 #For identi.ca and StatusNet based websites:
 #siteaddres = http://identi.ca/api/statuses/update.xml
 #For twitter
